fix:adjust router

--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
 		  Redirecting to github page...
 	  </div>
   </body>
+  <script>
+	  window.location.href = "https://github.com/ted123"
+  </script>
 </html>
